[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/main", "src/main/infrastructure"]

[project]
name = "dataland-automated-qa-service"
version = "1"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src/main"

[tool.coverage.run]
relative_files = true

[tool.coverage.paths]
source = ["./src/main"]

[tool.ruff]
line-length = 120
select = ["E", "F" , "C90" , "W" , "N" , "ANN", "ASYNC" , "D101", "D102", "D103", "D106", "D107", "D417", "D419"]

#select = ["F", "I"]
#line-length = 120
