[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/main", "src/main/infrastructure"]

[project]
name = "dataland-automated-qa-service"
version = "1"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src/main"

[tool.coverage.run]
relative_files = true

[tool.coverage.paths]
source = ["./src/main"]

[tool.ruff]
line-length = 120
pylint.max-args = 10
pylint.max-returns = 10
select = ["E", "F", "C90", "W", "N", "ASYNC", "TID",
    "ANN001", "ANN002", "ANN003", "ANN102", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ANN401",
    "D101", "D102", "D103", "D106", "D107", "D417", "D419",
    "C4", "PIE", "T20", "Q", "RSE", "RET", "SLF", "SIM", "ARG", "FIX", "ERA", "PL", "PERF", "FURB", "LOG", "RUF"]
